{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 337,
  "lineage": "c784c089-f988-f8bc-1305-d1b311a3acd0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "spendpilot-prod-hub-fw",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/azureFirewalls/spendpilot-prod-hub-fw/applicationRuleCollections/spendpilot-prod-allow-web-egress",
            "name": "spendpilot-prod-allow-web-egress",
            "priority": 100,
            "resource_group_name": "spendpilot-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": [],
                "name": "allow-http-https-outbound",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  },
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.11.0.0/16",
                  "10.12.0.0/16"
                ],
                "source_ip_groups": [],
                "target_fqdns": [
                  "*"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "spoke_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "spendpilot-prod-hub-fw",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/azureFirewalls/spendpilot-prod-hub-fw/networkRuleCollections/spendpilot-prod-allow-private-app-data",
            "name": "spendpilot-prod-allow-private-app-data",
            "priority": 200,
            "resource_group_name": "spendpilot-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "10.12.1.0/24"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "5432"
                ],
                "name": "allow-backend-to-postgres",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "10.11.1.0/24"
                ],
                "source_ip_groups": []
              },
              {
                "description": "",
                "destination_addresses": [
                  "10.12.0.0/24"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "11434"
                ],
                "name": "allow-backend-to-ollama",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "10.11.1.0/24"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "ollama_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/frontendIPConfigurations/private-frontend",
                "load_balancer_rules": [
                  "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/loadBalancingRules/ollama-rule"
                ],
                "name": "private-frontend",
                "private_ip_address": "10.12.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet"
              }
            ],
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb",
            "location": "centralindia",
            "name": "spendpilot-prod-ollama-ilb",
            "private_ip_address": "10.12.0.10",
            "private_ip_addresses": [
              "10.12.0.10"
            ],
            "resource_group_name": "spendpilot-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "ollama_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Compute/virtualMachineScaleSets/spendpilot-prod-data-ai-vmss/virtualMachines/0/networkInterfaces/spendpilot-prod-data-ai-vmss-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/backendAddressPools/ollama-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/loadBalancingRules/ollama-rule"
            ],
            "loadbalancer_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb",
            "name": "ollama-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.ollama_private",
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "ollama_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/probes/ollama-tcp-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/loadBalancingRules/ollama-rule"
            ],
            "loadbalancer_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb",
            "name": "ollama-tcp-probe",
            "number_of_probes": 2,
            "port": 11434,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.ollama_private",
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ollama_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/backendAddressPools/ollama-backend-pool"
            ],
            "backend_port": 11434,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/frontendIPConfigurations/private-frontend",
            "frontend_ip_configuration_name": "private-frontend",
            "frontend_port": 11434,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/loadBalancingRules/ollama-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb",
            "name": "ollama-rule",
            "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/loadBalancers/spendpilot-prod-ollama-ilb/probes/ollama-tcp-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.ollama_private",
            "azurerm_lb_backend_address_pool.ollama_private",
            "azurerm_lb_probe.ollama_private",
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/publicIPAddresses/spendpilot-prod-fw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.211.117.113",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "spendpilot-prod-fw-pip",
            "resource_group_name": "spendpilot-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-fw-pip",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "app_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
            "location": "centralindia",
            "name": "spendpilot-prod-app-spoke-rt",
            "resource_group_name": "spendpilot-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internet-via-firewall",
                "next_hop_in_ip_address": "10.10.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet",
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet",
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet"
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-app-spoke-rt",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "data_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-data-spoke-rt",
            "location": "centralindia",
            "name": "spendpilot-prod-data-spoke-rt",
            "resource_group_name": "spendpilot-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internet-via-firewall",
                "next_hop_in_ip_address": "10.10.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet"
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-spoke-rt",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet",
            "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "azurerm_route_table.app_spoke",
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "data_ai",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet",
            "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-data-spoke-rt",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "azurerm_route_table.data_spoke",
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet",
            "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "azurerm_route_table.app_spoke",
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "static_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet",
            "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall.hub",
            "azurerm_public_ip.firewall",
            "azurerm_route_table.app_spoke",
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "app_to_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/virtualNetworkPeerings/spendpilot-prod-app-to-data",
            "name": "spendpilot-prod-app-to-data",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-app-to-data",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "app_to_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/virtualNetworkPeerings/spendpilot-prod-app-to-hub",
            "name": "spendpilot-prod-app-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-app-to-hub",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "data_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/virtualNetworkPeerings/spendpilot-prod-data-to-app",
            "name": "spendpilot-prod-data-to-app",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-to-app",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "data_to_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/virtualNetworkPeerings/spendpilot-prod-data-to-hub",
            "name": "spendpilot-prod-data-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-to-hub",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "dependencies": [
            "module.data_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "edge_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/virtualNetworkPeerings/spendpilot-prod-hub-to-app",
            "name": "spendpilot-prod-hub-to-app",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-hub-to-app",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "edge_to_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/virtualNetworkPeerings/spendpilot-prod-hub-to-data",
            "name": "spendpilot-prod-hub-to-data",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-hub-to-data",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "dependencies": [
            "module.data_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 6,
                "min_capacity": 2
              }
            ],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
                "ip_addresses": [],
                "name": "api-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
                "ip_addresses": [],
                "name": "frontend-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/static-pool",
                "ip_addresses": [],
                "name": "static-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/api-http",
                "name": "api-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 8000,
                "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/api-probe",
                "probe_name": "api-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/frontend-http",
                "name": "frontend-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 3000,
                "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/frontend-probe",
                "probe_name": "frontend-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/static-http",
                "name": "static-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/static-probe",
                "probe_name": "static-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/spendpilot-prod-appgw-waf",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendIPConfigurations/public-frontend",
                "name": "public-frontend",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/publicIPAddresses/spendpilot-prod-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendPorts/http",
                "name": "http",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/appgw-subnet"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendIPConfigurations/public-frontend",
                "frontend_ip_configuration_name": "public-frontend",
                "frontend_port_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendPorts/http",
                "frontend_port_name": "http",
                "host_name": "app.myfinagent.online",
                "host_names": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/static-http-listener",
                "name": "static-http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendIPConfigurations/public-frontend",
                "frontend_ip_configuration_name": "public-frontend",
                "frontend_port_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendPorts/http",
                "frontend_port_name": "http",
                "host_name": "myfinagent.online",
                "host_names": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/primary-http-listener",
                "name": "primary-http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw",
            "identity": [],
            "listener": [],
            "location": "centralindia",
            "name": "spendpilot-prod-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/api-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "api-probe",
                "path": "/health",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/frontend-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "frontend-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/static-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "static-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/primary-http-listener",
                "http_listener_name": "primary-http-listener",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/requestRoutingRules/primary-path-routing-rule",
                "name": "primary-path-routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map",
                "url_path_map_name": "spendpilot-path-map"
              },
              {
                "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/static-pool",
                "backend_address_pool_name": "static-pool",
                "backend_http_settings_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/static-http",
                "backend_http_settings_name": "static-http",
                "http_listener_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/static-http-listener",
                "http_listener_name": "static-http-listener",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/requestRoutingRules/static-host-routing-rule",
                "name": "static-host-routing-rule",
                "priority": 110,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "spendpilot-rg",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
                "default_backend_address_pool_name": "frontend-pool",
                "default_backend_http_settings_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/frontend-http",
                "default_backend_http_settings_name": "frontend-http",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map",
                "name": "spendpilot-path-map",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
                    "backend_address_pool_name": "api-pool",
                    "backend_http_settings_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/api-http",
                    "backend_http_settings_name": "api-http",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map/pathRules/api-rule",
                    "name": "api-rule",
                    "paths": [
                      "/api/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-appgw",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.app_gateway.azurerm_public_ip.this",
            "module.app_gateway.azurerm_web_application_firewall_policy.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/publicIPAddresses/spendpilot-prod-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.235.184.156",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "spendpilot-prod-appgw-pip",
            "resource_group_name": "spendpilot-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-appgw-pip",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "backend-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "backend-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "frontend-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "frontend-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "static-app-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet",
            "name": "static-app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "static-app-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-app-spoke-vnet"
          },
          "dependencies": [
            "module.app_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.11.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4249ca7e-23b7-455d-bb12-8be995bae266",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet",
            "location": "centralindia",
            "name": "spendpilot-prod-app-spoke-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spendpilot-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.11.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet",
                "name": "frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg"
              },
              {
                "address_prefixes": [
                  "10.11.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet",
                "name": "backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg"
              },
              {
                "address_prefixes": [
                  "10.11.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet",
                "name": "static-app-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-app-spoke-rt",
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-static-app-nsg"
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-app-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-backend-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-bastion-to-backend-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-appgw-to-api",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-backend-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/backend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.backend_subnet_nsg.azurerm_network_security_group.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_ai_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-data-ai-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-data-ai-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "11434",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-backend-to-ollama",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.11.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-bastion-to-data-ai-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-ai-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_ai_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-data-ai-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.data_ai_subnet_nsg.azurerm_network_security_group.this",
            "module.data_network.azurerm_subnet.this",
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "data-ai-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.12.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet",
            "name": "data-ai-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "data-ai-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "dependencies": [
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "postgres-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.12.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "postgres-subnet-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/postgres-subnet",
            "name": "postgres-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "postgres-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-data-spoke-vnet"
          },
          "dependencies": [
            "module.data_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.12.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7056fa73-7905-4140-a16c-171600a5ec69",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet",
            "location": "centralindia",
            "name": "spendpilot-prod-data-spoke-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spendpilot-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.12.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/data-ai-subnet",
                "name": "data-ai-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/routeTables/spendpilot-prod-data-spoke-rt",
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-data-ai-nsg"
              },
              {
                "address_prefixes": [
                  "10.12.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "postgres-subnet-delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-data-spoke-vnet/subnets/postgres-subnet",
                "name": "postgres-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-spoke-vnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.edge_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "dependencies": [
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallSubnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "dependencies": [
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "appgw-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/appgw-subnet",
            "name": "appgw-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-hub-vnet"
          },
          "dependencies": [
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.edge_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "285f4e5c-dd87-42c5-94e9-952c27460b3e",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet",
            "location": "centralindia",
            "name": "spendpilot-prod-hub-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spendpilot-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/appgw-subnet",
                "name": "appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-hub-vnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-frontend-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-bastion-to-frontend-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-appgw-to-frontend",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-frontend-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/frontend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.frontend_subnet_nsg.azurerm_network_security_group.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_app_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-static-app-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-static-app-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-bastion-to-static-app-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-appgw-to-static-app",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.10.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-static-app-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_app_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-static-app-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this",
            "module.static_app_subnet_nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_app_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-static-web-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.11.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-app-spoke-vnet/subnets/static-app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-ED-8D-A0-26-29",
            "name": "spendpilot-prod-static-web-nic",
            "private_ip_address": "10.11.2.4",
            "private_ip_addresses": [
              "10.11.2.4"
            ],
            "resource_group_name": "spendpilot-rg",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "virtual_machine_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Compute/virtualMachines/spendpilot-prod-static-web"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-static-web-nic",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_app_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/static-pool",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-static-web-nic/ipConfigurations/internal|/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/static-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-static-web-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_gateway.azurerm_application_gateway.this",
            "module.app_gateway.azurerm_public_ip.this",
            "module.app_gateway.azurerm_web_application_firewall_policy.this",
            "module.app_network.azurerm_subnet.this",
            "module.app_network.azurerm_virtual_network.this",
            "module.edge_network.azurerm_subnet.this",
            "module.edge_network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this",
            "module.static_app_vm.azurerm_network_interface.this"
          ]
        }
      ]
    }
  ]
}